[gd_scene load_steps=17 format=3 uid="uid://oyr2bq6dvdto"]

[ext_resource type="Script" uid="uid://c0j35162xutrr" path="res://src/levels/game_level.gd" id="1_344b1"]
[ext_resource type="PackedScene" uid="uid://cey8irc2qc4kb" path="res://src/levels/level_editor.tscn" id="2_bknqm"]
[ext_resource type="Texture2D" uid="uid://d0n70c125u44u" path="res://art/naturebackground.jpg" id="2_iorfl"]
[ext_resource type="Script" uid="uid://dovks438rlcnp" path="res://src/objects/white_rect_outline.gd" id="3_3wkqw"]
[ext_resource type="Script" uid="uid://cwnynsmh8rxn8" path="res://src/objects/hit_logic.gd" id="3_bowuy"]
[ext_resource type="Script" uid="uid://c6up50b02xx6o" path="res://src/objects/sound_fx.gd" id="4_in5vt"]
[ext_resource type="AudioStream" uid="uid://c3yw1bq7oc0ee" path="res://sounds/soft-hitnormal.wav" id="5_suhqc"]
[ext_resource type="AudioStream" uid="uid://bbseb55bm573w" path="res://sounds/combobreak.ogg" id="6_xm2e2"]
[ext_resource type="PackedScene" uid="uid://tb7mwlbja25b" path="res://src/objects/game_ui.tscn" id="7_xm2e2"]
[ext_resource type="Script" uid="uid://dobhhdwxehikj" path="res://src/objects/pause_menu.gd" id="8_pdr6v"]
[ext_resource type="FontFile" uid="uid://e2vvqcbojd58" path="res://art/Roundex.otf" id="9_iorfl"]

[sub_resource type="Environment" id="Environment_bknqm"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.43
glow_hdr_threshold = 0.92

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5w1w8"]
bg_color = Color(0, 0, 0, 0.807)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydhfm"]
bg_color = Color(0.085, 0.085, 0.085, 0.652)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3wkqw"]
bg_color = Color(0, 0, 0, 0.812)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gv6q1"]
bg_color = Color(0, 0, 0, 0.757)

[node name="GameLevel" type="Node2D"]
script = ExtResource("1_344b1")

[node name="PlayArea" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 425.0
offset_top = 5.0
offset_right = 1495.0
offset_bottom = 1075.0

[node name="WhiteRectOutline" type="Node2D" parent="."]
z_index = 2
script = ExtResource("3_3wkqw")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 552)
scale = Vector2(0.96, 1.106)
texture = ExtResource("2_iorfl")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bknqm")

[node name="LevelEditor" parent="." instance=ExtResource("2_bknqm")]

[node name="HitLogic" type="Node2D" parent="."]
script = ExtResource("3_bowuy")

[node name="SoundFx" type="Node2D" parent="."]
script = ExtResource("4_in5vt")

[node name="pop1_SFX" type="AudioStreamPlayer" parent="SoundFx"]
stream = ExtResource("5_suhqc")
volume_db = -3.34

[node name="miss_SFX" type="AudioStreamPlayer" parent="SoundFx"]
stream = ExtResource("6_xm2e2")
volume_db = -13.433

[node name="GameUI" parent="." instance=ExtResource("7_xm2e2")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="FadeRect" type="ColorRect" parent="CanvasLayer"]
z_index = -1
offset_top = -8.0
offset_right = 1916.0
offset_bottom = 1083.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="PauseMenu" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("8_pdr6v")

[node name="PauseDim" type="ColorRect" parent="PauseMenu"]
offset_left = -5.0
offset_top = 5.0
offset_right = 1919.0
offset_bottom = 1081.0
color = Color(0, 0, 0, 0.558)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
offset_left = 748.0
offset_top = 392.5
offset_right = 1172.0
offset_bottom = 687.5

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer" groups=["noclicksound"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_iorfl")
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxFlat_5w1w8")
theme_override_styles/hover = SubResource("StyleBoxFlat_ydhfm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3wkqw")
theme_override_styles/normal = SubResource("StyleBoxFlat_gv6q1")
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseMenu/VBoxContainer" groups=["noclicksound"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_iorfl")
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxFlat_5w1w8")
theme_override_styles/hover = SubResource("StyleBoxFlat_ydhfm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3wkqw")
theme_override_styles/normal = SubResource("StyleBoxFlat_gv6q1")
text = "Restart"

[node name="MenuButton" type="Button" parent="PauseMenu/VBoxContainer" groups=["noclicksound"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_iorfl")
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxFlat_5w1w8")
theme_override_styles/hover = SubResource("StyleBoxFlat_ydhfm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3wkqw")
theme_override_styles/normal = SubResource("StyleBoxFlat_gv6q1")
text = "Menu"

[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButton" to="PauseMenu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/RestartButton" to="PauseMenu" method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/MenuButton" to="PauseMenu" method="_on_menu_button_pressed"]
